# ocaml-dkml

./: .gitattributes  .gitignore  .gitlab-ci.yml  .ocamlformat  CHANGES.md  CMakeLists.txt  CMakePresets.json  CMakePresetsCleared.json  CMakePresetsGenerated.json  DEVELOPERS.md  DEVELOPING.md  DEVELOPMENT.md  META  META.dkml-component-ocamlcompiler-common.template  META.dkml-component-ocamlcompiler-network.template  META.dkml-component-ocamlcompiler-offline.template  META.dkml-component-offline-desktop-ci.template  META.dkml-component-offline-desktop-full.template  Makefile  OUTSTANDING_ISSUES.md  README.md  TIMINGS.md  bump-packages.cmake  bump-repository.cmake  bump-version.cmake  dkml-base-compiler.opam  dkml-build-desktop.opam  dkml-compiler-env.opam  dkml-compiler-maintain.opam  dkml-compiler-src.opam  dkml-component-common-desktop.opam  dkml-component-desktop-maintain.opam  dkml-component-desktop-maintain.opam.template  dkml-component-ocamlcompiler-common.opam  dkml-component-ocamlcompiler-network.opam  dkml-component-ocamlcompiler-network.opam.template  dkml-component-offline-desktop-ci.opam  dkml-component-offline-desktop-full.opam  dkml-component-staging-desktop-ci.opam  dkml-component-staging-desktop-ci.opam.template  (+19 more)
.ci/dkml-compilers/gl/: setup-dkml.gitlab-ci.yml
.ci/sd4/: .gitignore
.github/workflows/: ci-pkgs.yml  dkml.yml  stale.yml  syntax.yml  test-pc.yml
.gitlab/ci/: test.gitlab-ci.yml  windows.gitlab-ci.yml
assets/staging-files/win32/: stop-ocaml.ps1  uninstall-userprofile.ps1
ci/: build-test.sh  build-unix-targz.sh  get-version.sh  prepare-release.sh  test-sanity-docker-linux_x86_64.sh  test.sh
ci/setup-dkml/gl/: setup-dkml.gitlab-ci.yml
ci/setup-dkml/pc/: setup-dkml-darwin_x86_64.sh  setup-dkml-linux_x86.sh  setup-dkml-windows_x86_64.ps1
ci/src/: bump_source.ml  checksum.sh  dune
cmake/: get-version.cmake
cmake/scripts/: reindex.cmake
contributors/: Makefile  release.sh
contributors/changes/: v2.1.0.md  v2.1.1.md  v2.1.2.md  v2.1.3.md  v2.1.4.md
contributors/doc/: CommandReference.rst
debug/: persistent_env.ml
dependencies/: CMakeLists.txt  fetch-git-projects.cmake
env/: META  standard-compiler-env-to-ocaml-configure-env.sh
pkg/bump/: CMakeLists.txt  DkMLAnyRun.cmake  DkMLBumpPackagesParticipant.cmake  DkMLBumpVersionParticipant.cmake  DkMLPackages.cmake  DkMLPatches.cmake  DkMLPublish.cmake  branch-delete.cmake  clear-compiler-env.in.sh  dos2unix.in.sh  generate-compiler-launcher.in.sh  idempotent-tag.cmake  push-subtree-project.in.sh  reset-compiler-env.in.sh  subtree-split.cmake  upsert-c-pkgs.in.sh  upsert-dkml-pkgs-compiler.in.sh  upsert-dkml-pkgs-flavor-full-not-dune.in.sh  upsert-dkml-switch.in.sh  upsert-installer.in.sh  upsert-utils.in.sh
pkg/bump/WindowsSandbox/: CMakeLists.txt  install-git.cmd  install-msys2.cmd  install-msys2.ps1  install-native-prereqs.cmd  install-vcruntime.cmd  install-vcruntime.ps1  install-vsstudio.cmd  install-winget.cmd  install-winget.ps1  test.in.cmd  uninstaller-byte.in.cmd  uninstaller-native.in.cmd
scripts/: build.sh  install-ocamlc-opt.sh  ocamlexe.awk  stdlib-unixonly.awk  stdlib.awk
src/: gl_setup_dkml_yml.ml  r-c-ocaml-1-setup.sh  r-c-ocaml-2-build_host.sh  r-c-ocaml-3-build_cross.sh  r-c-ocaml-9-trim.sh  r-c-ocaml-README.md  r-c-ocaml-functions.sh
src/api/: conf_loader.mli  staging_dkmlconfdir_api.mli
src/buildtime/: dkml_component_offline_desktop_full.ml  dkml_component_staging_desktop_full.ml  dune
src/buildtime/common/: dune
src/buildtime/offline/: dkml_component_ocamlcompiler_offline.ml  dune
src/citime/: README.md  copy_installed.ml  gen_globals.ml
src/common/: ocamlcompiler_common.ml
src/dkml-confdir/: dune
src/dkml-exe/: cmd_init.ml  dkml_exe.ml  dkml_exe_lib.ml  dune
src/fswatch_on_inotifywin/: fswatch.ml
src/installtime/: install.ml  install.mli  uninstall.ml
src/installtime/setup-userprofile/: setup_userprofile.ml
src/installtime/uninstall-userprofile/: dune  uninstall_userprofile.ml
src/installtime_enduser/unix/: dune
src/logic/: caching.ml  dune  model.ml  typography.ml
src/none/: ci-4.12.1-pkgs.txt  dune-anyver-pkgs.txt  full-4.12.1-pkgs.txt  full-4.13.1-pkgs.txt  full-4.14.0-pkgs.txt  full-4.14.2-pkgs.txt  full-anyver-pkgs.txt
src/p/: ocaml-common-4_12-a01-alignfiletime.md  ocaml-common-4_14-a03-keepasm.md  ocaml-common-4_14-a04-xdg.md  ocaml-common-4_14-a05-msvccflags.md  ocaml-common-4_14-a05-msvccflags.patch  ocaml-common-4_14-a06-linearclosures.patch  ocaml-common-4_14_0-a01-fmatest.md  ocaml-common-4_14_0-a01-fmatest.patch  ocaml-cross-4_12-a02-arm32.md  ocaml-cross-4_14_0-a02-arm32.md  ocaml-cross-4_14_0-a02-arm32.patch  ocaml-cross-4_14_2-a02-arm32.md
src/runtimelib/: cmdline.ml  dkml_cli.ml  dkml_context.ml  dkml_environment.ml  dkml_news.ml  dkml_runtimelib.mli  dos2unix.ml  dune  ocaml_opam_repository_gitref.txt  opam_context.ml
src/runtimescripts/: dkml_runtimescripts.mli  dune
src/runtimescripts/scripts/: cache-vsstudio.bat  install-ocaml-compiler.sh
src/scripts/: checkout-code.sh  config-vsstudio.ps1  msvcpath.awk  setup-dkml.sh
src/unix/: create-opam-switch.sh
src/unix/private/: create-tools-switch.sh  global-compile.awk  init-opam-root.sh
src/windows/DeploymentHash/: DeploymentHash.psm1
src/windows/Machine/: Machine.psm1
src/windows/UnixInvokers/: UnixInvokers.psm1
src/with-dkml/: cmdline.ml  dune  with_dkml.ml
test/: README.md
test/gh-darwin/post/: action.yml
test/gh-darwin/pre/: action.yml
test/gh-linux/post/: action.yml
test/gh-linux/pre/: action.yml  dune
test/gitlab/: dune
test/gl/: setup-dkml.gitlab-ci.yml
test/pc/: setup-dkml-darwin_arm64.sh  setup-dkml-darwin_x86_64.sh  setup-dkml-linux_x86.sh  setup-dkml-linux_x86_64.sh  setup-dkml-windows_x86.ps1  setup-dkml-windows_x86_64.ps1
tests/: postinstall-test.cmd  postinstall-test.sh
tests/script1/: script.ocamlinit
tmpl/pc/: setup-dkml-darwin_arm64.sh  setup-dkml-darwin_x86_64.sh  setup-dkml-linux_x86.sh  setup-dkml-linux_x86_64.sh  setup-dkml-windows_x86.ps1  setup-dkml-windows_x86_64.ps1
unix/: crossplatform-functions.sh
(+10 files in other folders)
