opam-version: "2.0"
version: "2.1.1"
synopsis: "DEPRECATED; use dkml-compiler-src instead. Scripts to configure DKML compilation in various environments"
maintainer: ["opensource+diskuv-ocaml@support.diskuv.com"]
authors: ["Diskuv, Inc. <opensource+diskuv-ocaml@support.diskuv.com>"]
license: "Apache-2.0"
homepage: "https://github.com/diskuv/dkml-compiler"
bug-reports: "https://github.com/diskuv/dkml-compiler/issues"
depends: []
dev-repo: "git+https://github.com/diskuv/dkml-compiler.git"
build: []
install: [
  [".\\install-env.cmd"  "%{_:lib}%"] {os = "win32"}
  ["sh" "./install-env.sh" "%{_:lib}%"]  {!(os = "win32")}
]