(rule
 (target dkml_config.ml)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let version = String.trim {|%{read:version.txt}|}\n")
    (echo
     "let ocaml_opam_repository_gitref = String.trim {|%{read:ocaml_opam_repository_gitref.txt}|}\n")
    (echo "let ocaml_system = String.trim {|%{system}|}\n")))))

(executable
 (name dos2unix)
 (modules dos2unix)
 (libraries astring bos fpath))

(rule
 (target crossplat.ml)
 (deps
  (:cf "%{lib:dkml-runtime-common:unix/crossplatform-functions.sh}"))
 (action
  (progn
   (system "mkdir crossplat")
   (no-infer
    (run %{exe:dos2unix.exe} %{cf} crossplat/crossplatform-functions.sh))
   (run
    %{bin:ocaml-crunch}
    "--mode=plain"
    "--output=%{target}"
    "--ext=sh"
    "crossplat"))))

(library
 (name dkml_runtimelib)
 (public_name dkml-runtimelib)
 (modules (:standard \ dos2unix))
 (libraries
  dkml-c-probe
  astring
  bos
  digestif.c
  digestif
  fmt
  fmt.cli
  fmt.tty
  fpath
  logs.cli
  logs.fmt
  sexplib
  ptime
  ptime.clock.os
  uri
  xdg))
