(rule
 (target crossplat.ml)
 (deps 
  (:cf      "%{lib:dkml-runtime-common:unix/crossplatform-functions.sh}")
  )
 (action
  (progn
   (system "mkdir crossplat")
   (no-infer (copy %{cf} crossplat/crossplatform-functions.sh))
   (run
    %{bin:ocaml-crunch}
    "--mode=plain"
    "--output=%{target}"
    "--ext=sh"
    "crossplat"))))

(executable
 (package with-dkml)
 (name with_dkml)
 (public_name with-dkml)
 ; No PPX! This should compile with the bare minimum:
 ; 1. This is installed directly in the end-user system; it should be lightweight
 ;    so less security surface area and less support burden
 ; 2. Since this can be compiled using Dune's `ocaml bootstrap.ml`, we need
 ;    to list _all_ transitive dependencies (at least for Dune 2.9.3)
 (libraries
  dkml-c-probe
  dkml-runtimelib
  dkml-runtimescripts
  astring
  bos
  fmt
  fmt.tty
  fpath
  logs
  logs.fmt
  rresult
  sexplib
  sha))
