(executable
 (name uninstall_userprofile)
 (public_name uninstall_userprofile)
 (package dkml-component-ocamlcompiler-common)
 (modes
  (byte exe))
 (libraries
  dkml-component-ocamlcompiler-common.api
  dkml-install.api
  diskuvbox
  bos
  fpath
  base64
  cmdliner
  logs
  logs.cli
  logs.fmt
  fmt.cli
  fmt.tty))

(install
 (section share)
 (package dkml-component-ocamlcompiler-common)
 (files
  (uninstall_userprofile.bc
   as
   staging-files/generic/uninstall_userprofile.bc)))
